# gmail-mcp-server

./: .gitignore  EXAMPLE_PROMPTS.md  README.md  claude_desktop_config.example.json  pyproject.toml
scripts/: test_gmail_setup.py
src/: __init__.py  server.py
tests/: test_server.py
